<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.HomeScreen">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/posterRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/home_poster_item" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/trending_now"
                android:textColor="@color/md_theme_inverseSurface"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/trendingArrowBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/posterRecyclerView" />

            <ImageButton
                android:id="@+id/trendingArrowBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:foregroundGravity="center"
                android:src="@drawable/arrow_up"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/posterRecyclerView"
                app:tint="@color/md_theme_inverseSurface"
                android:contentDescription="@string/trending_arrow_button"/>

            <ImageButton
                android:id="@+id/searchBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/search"
                app:layout_constraintEnd_toStartOf="@+id/downloadBtn"
                app:layout_constraintTop_toBottomOf="@+id/posterRecyclerView"
                app:tint="@color/md_theme_inverseSurface"
                android:contentDescription="@string/search_button"/>

            <ImageButton
                android:id="@+id/downloadBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posterRecyclerView"
                app:tint="@color/md_theme_inverseSurface"
                android:contentDescription="@string/download_button"/>

            <TextView
                android:id="@+id/seeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:alpha=".8"
                android:text="@string/see_more"
                android:textColor="@color/md_theme_inverseSurface"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchBtn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seeMore" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueWatchingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/continue_watching"
                android:textColor="@color/md_theme_onSecondaryFixed"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/play"
                app:iconSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieRecyclerView" />

            <TextView
                android:id="@+id/seeMore2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:alpha=".8"
                android:text="@string/see_more"
                android:textColor="@color/md_theme_inverseSurface"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/continueWatchingBtn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/continueRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seeMore2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/latest_movies"
                android:textColor="@color/md_theme_inverseSurface"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/continueRecyclerView" />

            <ImageButton
                android:id="@+id/latestArrowBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:foregroundGravity="center"
                android:src="@drawable/arrow_up"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/continueRecyclerView"
                app:tint="@color/md_theme_inverseSurface"
                android:contentDescription="@string/latest_arrow_button"/>

            <TextView
                android:id="@+id/seeMore3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:alpha=".8"
                android:text="@string/see_more"
                android:textColor="@color/md_theme_inverseSurface"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continueRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seeMore3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
