<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeScreen">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posterRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/home_poster_item" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/trending_now"
            android:textColor="@color/md_theme_inverseSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterRecyclerView" />

        <ImageButton
            android:id="@+id/trendingArrowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:foregroundGravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_up"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/posterRecyclerView"
            app:tint="@color/md_theme_inverseSurface" />

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/search"
            app:layout_constraintEnd_toStartOf="@+id/downloadBtn"
            app:layout_constraintTop_toBottomOf="@+id/posterRecyclerView"
            app:tint="@color/md_theme_inverseSurface"
            android:layout_marginEnd="8dp"/>

        <ImageButton
            android:id="@+id/downloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterRecyclerView"
            app:tint="@color/md_theme_inverseSurface"
            android:layout_marginEnd="18dp"/>

        <TextView
            android:id="@+id/seeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBtn"
            android:textColor="@color/md_theme_inverseSurface"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:alpha=".8"
            android:textSize="11sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seeMore"
            android:nestedScrollingEnabled="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueWatchingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/continue_watching"
            android:textColor="@color/md_theme_background"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/play"
            app:iconSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/continueRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seeMore2"
            android:nestedScrollingEnabled="true"/>

        <TextView
            android:id="@+id/seeMore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/continueWatchingBtn"
            android:textColor="@color/md_theme_inverseSurface"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:alpha=".8"
            android:textSize="11sp"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/latest_movies"
            android:textColor="@color/md_theme_inverseSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/continueRecyclerView" />

        <ImageButton
            android:id="@+id/latestArrowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:foregroundGravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_up"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/continueRecyclerView"
            app:tint="@color/md_theme_inverseSurface" />

        <TextView
            android:id="@+id/seeMore3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:alpha=".8"
            android:text="@string/see_more"
            android:textColor="@color/md_theme_inverseSurface"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/continueRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/latestRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seeMore3"
            android:nestedScrollingEnabled="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
